--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px
+}
 
 #calc {
     display: flex;
